typo on base_image_prefix_map

--- a/hooks/.config
+++ b/hooks/.config
@@ -51,7 +51,7 @@ echo
 # Path
 export PATH="$PWD/docker:$PATH"
 # => https://hub.docker.com/u/arm64v8/
-declare -A base_image_prefix_map=( ["arm64v8"]="arm64v8/" ["arm32v5"]="arm32v5/" ["arm32v6"]="arm32v6/" ["arm32v7"]="arm32v7/" ["amd64"]="" ["i386"]="386")
+declare -A base_image_prefix_map=( ["arm64v8"]="arm64v8/" ["arm32v5"]="arm32v5/" ["arm32v6"]="arm32v6/" ["arm32v7"]="arm32v7/" ["amd64"]="" ["i386"]="i386/")
 # => dpkg -L qemu-user-static | grep /usr/bin/
 declare -A docker_qemu_arch_map=( ["arm64v8"]="aarch64" ["arm32v5"]="arm" ["arm32v6"]="arm" ["arm32v7"]="arm" ["amd64"]="x86_64" ["i386"]="i386")
 # => S6 Overlay arch map
